2.0.0:
------
 * Fix some type issues
 * Fix missing token for the unlock link
 * Fix liberation of current lock
 * Raise requirements
 * Re-/Move UTF-8 lang file to plugin root for Styx 5.0

1.21:
-----
 * Better check non category addData

1.20:
-----
 * Add category depth to the category-tree option
 * Improve constants

1.19:
-----
 * Fix to allow fetching categories by author by adding global $serendipity array
 * Add PLUGIN_EVENT_ENTRYCHECK_LOCKING description
 * Add ChangeLog

1.18:
-----
 * Remove WYSIWYG warning

1.17:
-----
 * Use lang API - extends required version
 * Fix error (preview) messaging

---